--- a/action.yml
+++ b/action.yml
@@ -93,11 +93,11 @@ runs:
         if [[ -z "${{ inputs.update_status }}" || "${{ inputs.color }}" == danger ]];then
           echo "color=${{ inputs.color }}" >> $GITHUB_ENV
         else
-          for each in ${{join(steps.status.outputs.*, '\n')}};do
+          for each in ${{join(steps.status.outputs.*, ' ')}};do
             name=$(echo "$each" | cut -d":" -f3 | cut -d"-" -f2)
             echo "$name"
-            echo "$each" | grep -v "$name" | grep ':hourglass_flowing_sand:' || true
-            pattern=$(echo "$each" | grep -v "$name" | grep ':hourglass_flowing_sand:' || true)
+            echo "$each" | grep ':hourglass_flowing_sand:' || true
+            pattern=$(echo "$each" | grep ':hourglass_flowing_sand:' || true)
             echo "$pattern"
             if [ -z $pattern ];then
               echo "color=good" >> $GITHUB_ENV
