--- a/action.yml
+++ b/action.yml
@@ -108,34 +108,14 @@ runs:
         update-ts: ${{ inputs.message_id }}
         payload: |
           {
-            "text": ":github: Workflow run by: *${{ github.actor }}*",
+            "text": ":github: <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }}> is triggered by <${{ github.event.pull_request.html_url || github.event.head_commit.url }}|${{ github.event_name }}> from *${{ github.actor }}*\nRepo <https://github.com/${{ github.repository }}|${{ github.repository }}>\nBranch <https://github.com/${{ github.repository }}/tree/${{ github.head_ref || github.ref_name}}|${{ github.head_ref || github.ref_name}}>",
             "attachments": [
               {
                 "color": "${{ env.color }}",
                 "fields": [
                   {
-                    "title": "Repo",
-                    "short": true,
-                    "value": "<https://github.com/${{ github.repository }}|${{ github.repository }}>"
-                  },
-                  {
-                    "title": "Workflow",
-                    "short": true,
-                    "value": "<https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }}>"
-                  },
-                  {
                     "title": "Status",
                     "value": "${{join(steps.status.outputs.*, '\n')}}",
-                    "short": true
-                  },
-                  {
-                    "title": "Branch",
-                    "value": "<https://github.com/${{ github.repository }}/tree/${{ github.head_ref || github.ref_name}}|${{ github.head_ref || github.ref_name}}>",
-                    "short": true
-                  },
-                  {
-                    "title": "Event",
-                    "value": "<${{ github.event.pull_request.html_url || github.event.head_commit.url }}|${{ github.event_name }}>",
                     "short": true
                   }
                 ],
