--- a/action.yml
+++ b/action.yml
@@ -68,6 +68,19 @@ runs:
             echo "$each"
             echo "$each=${{ env.emoji }} $each\n" >> $GITHUB_OUTPUT
           done
+        elif [ ${{ job.status }} == 'cancelled' ];then
+          for each in ${{join(steps.message_statuses.outputs.*, ' ')}};do
+            name=$(echo "$each" | cut -d":" -f3 | cut -d"#" -f2)
+            pattern=$(echo "$each" | grep ':hourglass_flowing_sand:' || true)
+            if [ -z $pattern ];then
+              echo "job already done - $each"
+            else
+              echo "color=warning" >> $GITHUB_ENV
+              each=$(echo "$each" | sed "s/:hourglass_flowing_sand:/:o:/")
+            fi
+            name=$(echo "$each" | cut -d":" -f3 | cut -d"#" -f2)
+            echo "$name=$(echo "$each" | sed 's/#/ /')\n" >> $GITHUB_OUTPUT
+          done
         else
           for each in ${{join(steps.message_statuses.outputs.*, ' ')}};do
             pattern=$(echo "$each" | grep ${{ inputs.update_status }} || true)
@@ -86,16 +99,7 @@ runs:
         if [[ -z "${{ inputs.update_status }}" || "${{ inputs.color }}" == danger ]];then
           echo "color=${{ inputs.color }}" >> $GITHUB_ENV
         elif [ ${{ job.status }} == 'cancelled' ];then
-          for each in ${{join(steps.status.outputs.*, ' ')}};do
-            name=$(echo "$each" | cut -d":" -f3 | cut -d"#" -f2)
-            pattern=$(echo "$each" | grep ':hourglass_flowing_sand:' || true)
-            if [ -z $pattern ];then
-              echo "job already done - $each"
-            else
-              echo "color=warning" >> $GITHUB_ENV
-              each=$(echo "$each" | sed "s/:hourglass_flowing_sand:/:o:/")
-            fi
-          done
+          echo "color=warning" >> $GITHUB_ENV
         else
           for each in ${{join(steps.status.outputs.*, ' ')}};do
             name=$(echo "$each" | cut -d":" -f3 | cut -d"#" -f2)
