--- a/action.yml
+++ b/action.yml
@@ -62,20 +62,7 @@ runs:
       shell: bash
       id: status
       run: |
-        if [ ${{ job.status }} == 'cancelled' ];then
-          for each in ${{join(steps.message_statuses.outputs.*, ' ')}};do
-            name=$(echo "$each" | cut -d":" -f3 | cut -d"#" -f2)
-            pattern=$(echo "$each" | grep ':hourglass_flowing_sand:' || true)
-            if [ -z $pattern ];then
-              echo "job already done - $each"
-            else
-              echo "color=warning" >> $GITHUB_ENV
-              each=$(echo "$each" | sed "s/:hourglass_flowing_sand:/:o:/")
-            fi
-            name=$(echo "$each" | cut -d":" -f3 | cut -d"#" -f2)
-            echo "$name=$(echo "$each" | sed 's/#/ /')\n" >> $GITHUB_OUTPUT
-          done
-        elif [ -z ${{ inputs.update_status }} ];then
+        if [ -z ${{ inputs.update_status }} ];then
           for each in $(echo ${{ inputs.status }})
           do
             echo "$each"
@@ -96,9 +83,7 @@ runs:
     - name: Set Slack color
       shell: bash
       run: |
-        if [ ${{ job.status }} == 'cancelled' ];then
-          echo "color=warning" >> $GITHUB_ENV
-        elif [[ -z "${{ inputs.update_status }}" || "${{ inputs.color }}" == danger ]];then
+        if [[ -z "${{ inputs.update_status }}" || "${{ inputs.color }}" == danger ]];then
           echo "color=${{ inputs.color }}" >> $GITHUB_ENV
         else
           for each in ${{join(steps.status.outputs.*, ' ')}};do
