--- a/action.yml
+++ b/action.yml
@@ -62,11 +62,22 @@ runs:
       shell: bash
       id: status
       run: |
-        if [ -z ${{ inputs.update_status }} ];then
+        if [[ -z "${{ inputs.update_status }}" && "${{ job.status }}" != 'cancelled' ]];then
           for each in $(echo ${{ inputs.status }})
           do
             echo "$each"
             echo "$each=${{ env.emoji }} $each\n" >> $GITHUB_OUTPUT
+          done
+        elif [ ${{ job.status }} == 'cancelled' ];then
+          for each in ${{join(steps.message_statuses.outputs.*, ' ')}};do
+            pattern=$(echo "$each" | grep ':hourglass_flowing_sand:' || true)
+            if [ -z $pattern ];then
+              continue
+            else
+              each=$(echo "$each" | sed "s/:hourglass_flowing_sand:/:o:/")
+            fi
+            name=$(echo "$each" | cut -d":" -f3 | cut -d"#" -f2)
+            echo "$name=$(echo "$each" | sed 's/#/ /')\n" >> $GITHUB_OUTPUT
           done
         else
           for each in ${{join(steps.message_statuses.outputs.*, ' ')}};do
@@ -83,8 +94,10 @@ runs:
     - name: Set Slack color
       shell: bash
       run: |
-        if [[ -z "${{ inputs.update_status }}" || "${{ inputs.color }}" == danger ]];then
+        if [[ -z "${{ inputs.update_status }}" && "${{ job.status }}" != 'cancelled' || "${{ inputs.color }}" == danger && "${{ job.status }}" != 'cancelled' ]];then
           echo "color=${{ inputs.color }}" >> $GITHUB_ENV
+        elif [ ${{ job.status }} == 'cancelled' ];then
+          echo "color=warning" >> $GITHUB_ENV
         else
           for each in ${{join(steps.status.outputs.*, ' ')}};do
             name=$(echo "$each" | cut -d":" -f3 | cut -d"#" -f2)
@@ -114,7 +127,7 @@ runs:
                 "color": "${{ env.color }}",
                 "fields": [
                   {
-                    "title": "Workflow status:",
+                    "title": "${{ job.status == 'cancelled' && 'Workflow status: :o: Cancelled' || 'Workflow status:' }}",
                     "value": "${{join(steps.status.outputs.*, '\n')}}",
                     "short": true
                   }
